<resources>
    <string name="app_name">Moja półka</string>
    <string name="bookshelf">Moja półka</string>
    <string name="search">Szukaj</string>
    <string name="settings">Ustawienia</string>

    <string name="search_book">Szukaj książki</string>
    <string name="search_hint">Wpisz tytuł, autora lub isbn</string>

    <string name="book_info">Info</string>
    <string name="book_reviews">Opinie</string>
    <string name="book_my_data">Moje dane</string>
    <string name="book_quotes">Cytaty</string>

    <string name="info_zero_reviews">Brak opinii o tej książce</string>
    <string name="info_zero_quotes">Brak cytatów dla tej książki</string>
    <string name="is_read">Przeczytane?</string>
    <string name="your_review_text">Twoja opinia</string>
    <string name="enter_review">Wpisz recenzję</string>
    <string name="add_review_text">Dodaj recenzję</string>
    <string name="your_quote_text">Twój cytat</string>
    <string name="enter_quote_text">Wpisz cytat</string>
    <string name="enter_quote_page">Podaj stronę</string>
    <string name="add_quote_text">Dodaj cytat</string>
    <string name="add_book_to_bookshelf_button">Postaw książkę na półce</string>
    <string name="delete_book_from_bookshelf_button">Zdejmij książkę z półki</string>

    <string name="add_book_info">Dodaj nową książkę</string>
    <string name="title_hint">Tytuł</string>
    <string name="author_hint">Autor</string>
    <string name="description_hint">Opis</string>
    <string name="isbn_hint">ISBN</string>
    <string name="pages_hint">Liczba stron</string>
    <string name="publish_date_hint">Data wydania</string>
    <string name="select_date">Wybierz datę</string>
    <string name="category_hint">Kategoria</string>
    <string name="image_hint">Adres URL okładki</string>
    <string name="add_book_button">Dodaj książkę</string>

    <string name="scan_button">Przycisk do skanowania ISBN</string>
    <string name="date_picker_button">Przycisk wyboru daty</string>

    <string name="unknown_book_url"><![CDATA[https://img.freepik.com/free–vector/bookshelf–form-question-mark-with-colorful-books_7188-137.jpg?size=338&ext=jpg]]></string>

    <string name="login">Zaloguj się</string>
    <string name="register">Zarejestruj się</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Hasło</string>
    <string name="confirm_password_hint">Powtórz hasło</string>
    <string name="new_password_hint">Nowe hasło</string>
    <string name="old_password_hint">Stare hasło</string>
    <string name="full_name_hint">Imię i nazwisko</string>
    <string name="login_signup_hint">Nie masz konta? Zarejestruj się</string>
    <string name="signup_login_hint">Masz już konto? Zaloguj się</string>
    <string name="welcome_back">Witaj ponownie!</string>
    <string name="registration">Rejestracja</string>
    <string name="special_quotation">Kto czyta książki, żyje podwójnie</string>

    <string name="empty_email_error">Wprowadź email</string>
    <string name="empty_password_error">Wprowadź hasło</string>
    <string name="empty_confirm_password_error">Musisz potwierdzić hasło</string>
    <string name="empty_full_name_error">Wprowadź imię i nazwisko</string>
    <string name="incorrect_email_error">Wprowadź poprawny adres email</string>
    <string name="strong_password_error">Hasło musi się składać z conajmniej 8 znaków, 1 cyfry, 1 litery i 1 znaku specjalnego</string>
    <string name="confirm_password_error">Hasła muszą być takie same</string>
    <string name="incorrect_password_error">Podałeś złe hasło</string>
    <string name="required_field_error">To pole jest wymagane</string>
    <string name="unique_field_error">Wartość tego pola musi być unikalna</string>

    <string name="change">Zmień</string>
    <string name="change_email_title">Zmiana adresu email</string>
    <string name="change_full_name_title">Zmiana imienia i nazwiska</string>
    <string name="change_password_title">Zmiana hasła</string>

</resources>