<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="130dp"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/asphalt"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/specialQuotationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTextView"
        android:layout_marginTop="10dp"
        android:text="@string/special_quotation"
        android:textColor="@color/asphalt"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/loginButton"
        android:layout_below="@+id/welcomeTextView"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/asphalt"
            android:textColorHint="@color/asphalt"
            android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/password_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/asphalt"
            android:textColorHint="@color/asphalt"
            android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/loginSignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_signup_hint"
                android:textColor="@color/asphalt"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold" />

        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/asphalt"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/clouds"
        android:textSize="16sp" />
</RelativeLayout>